RESOLVED FIXED89613
[Qt] DRT in standalone mode hangs after the first test
https://bugs.webkit.org/show_bug.cgi?id=89613
Summary [Qt] DRT in standalone mode hangs after the first test
Balazs Kelemen
Reported 2012-06-20 16:27:47 PDT
Wow, what a silly bug.
Attachments
Patch (2.05 KB, patch)
2012-06-20 16:46 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-06-20 16:46:53 PDT
Csaba Osztrogonác
Comment 2 2012-06-21 04:52:30 PDT
Comment on attachment 148678 [details] Patch LGTM,r=me
Balazs Kelemen
Comment 3 2012-06-21 05:01:48 PDT
Comment on attachment 148678 [details] Patch Clearing flags on attachment: 148678 Committed r120917: <http://trac.webkit.org/changeset/120917>
Balazs Kelemen
Comment 4 2012-06-21 05:01:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.